[package]
name = "at-comments"
version = "0.4.7"
edition = "2021"
license = "MIT"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = "0.12"
rss = "2.0"
log = "0.4.29"
serde = "1.0.228"
chrono = "0.4.42"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
