[package]
name = "at-comments"
version = "1.0.4"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tower = "0.4"
hyper = { version = "1", features = ["full"] }
reqwest = "0.13"
rss = "2.0"
log = "0.4.29"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
config = "0.13"

[dependencies.sqlx]
version = "0.8"
features = ["postgres", "runtime-tokio-rustls", "json", "chrono"]
